--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,5 @@ dependencies {
 
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
-
+    implementation("androidx.fragment:fragment-ktx:1.5.5")
 }
